# dspy-example

./: README.md  main.py  pyproject.toml  requirements.txt
data/: devset.csv  trainset.csv
programs/: gepa_light_optimized_v1.json  mipro_light_optimized_v1.json
src/: get_response.py  run_gepa.py  run_mipro.py
